--- a/app/views/personas_vinculadas/index.html.erb
+++ b/app/views/personas_vinculadas/index.html.erb
@@ -1,41 +1,25 @@
-<h1>Listing personas_vinculadas</h1>
+<div data-role="header">
+  <h1>Personas vinculadas</h1>
+  <%= link_to 'Agregar', new_persona_vinculada_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+</div>
 
-<table>
-  <tr>
-    <th>Tipo documento</th>
-    <th>Numero documento</th>
-    <th>Nombres</th>
-    <th>Apellido paterno</th>
-    <th>Apellido materno</th>
-    <th>Telefono fijo</th>
-    <th>Telefono movil</th>
-    <th>Correo</th>
-    <th>Foto</th>
-    <th>Usuario</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
-<% @personas_vinculadas.each do |persona_vinculada| %>
-  <tr>
-    <td><%= persona_vinculada.tipo_documento %></td>
-    <td><%= persona_vinculada.numero_documento %></td>
-    <td><%= persona_vinculada.nombres %></td>
-    <td><%= persona_vinculada.apellido_paterno %></td>
-    <td><%= persona_vinculada.apellido_materno %></td>
-    <td><%= persona_vinculada.telefono_fijo %></td>
-    <td><%= persona_vinculada.telefono_movil %></td>
-    <td><%= persona_vinculada.correo %></td>
-    <td><%= persona_vinculada.foto %></td>
-    <td><%= persona_vinculada.usuario %></td>
-    <td><%= link_to 'Show', persona_vinculada %></td>
-    <td><%= link_to 'Edit', edit_persona_vinculada_path(persona_vinculada) %></td>
-    <td><%= link_to 'Destroy', persona_vinculada, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Persona vinculada', new_persona_vinculada_path %>
+<div data-role="content">
+  <ul data-role="listview" data-filter="true">
+    <% @personas_vinculadas.each do |persona_vinculada| %>
+    <li data-role="list-divider">      
+      <%= persona_vinculada.apellidos_nombres %>
+    </li>
+    <li data-filtertext="<%= persona_vinculada.apellidos_nombres %>" >
+      <%= link_to edit_persona_vinculada_path(persona_vinculada) do %>
+        <%= image_tag("#{persona_vinculada.foto}") %>
+        <%= simple_format("#{ListaValor.find_by_tabla_and_item(2, persona_vinculada.tipo_documento).descripcion} #{persona_vinculada.numero_documento}") %> 
+        <br>
+        <%= simple_format("Correo: #{persona_vinculada.correo}") %>
+        <%= simple_format("Teléfonos: #{persona_vinculada.telefono_fijo} / #{persona_vinculada.telefono_movil}") %>
+      <% end %>
+      <%= link_to 'Eliminar', persona_vinculada, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>      
+    </li>
+    <% end  %>
+  </ul>
+</div>
