--- a/app/views/alumnos/index.html.erb
+++ b/app/views/alumnos/index.html.erb
@@ -1,8 +1,17 @@
 <div data-role="header">
   <h1>Alumnos</h1>
 </div>
-
+<% if !params[:seccion_id].nil? %>  
+  <% seccion = params[:seccion_id] %>
+<% end %>
 <div data-role="content" class="content-primary">
+  <%= form_tag(buscar_alumno_path) do %>
+    <div data-role="fieldcontain">
+      Sección: <%= collection_select(:seccion, :id, Seccion.all, :id, :grado_seccion, {:selected => seccion}, {"data-mini" => "true", :name => "seccion_id"}) %>
+      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true" %>
+    </div>
+  <% end %>
+
   <ul data-role="listview" data-filter="true">
     <% @alumnos.each do |alumno| %>
     <li data-filtertext="<%= alumno.apellidos_nombres %>" >
