Ajustes vincular personas

--- a/app/views/anios_alumnos/_form.html.erb
+++ b/app/views/anios_alumnos/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.number_field :alumno_id %>
   </div>
   <div class="field">
+    <%= f.label :seccion_id %><br />
+    <%= f.number_field :seccion_id %>
+  </div>
+  <div class="field">
     <%= f.label :usuario %><br />
     <%= f.text_field :usuario %>
   </div>
