--- a/app/views/cuadernos_controles/index.html.erb
+++ b/app/views/cuadernos_controles/index.html.erb
@@ -1,18 +1,42 @@
 <div data-role="header">
   <h1>Cuaderno de control</h1>
-  <%= link_to 'Agregar', new_cuaderno_control_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
+  <%= link_to 'Registrar', new_cuaderno_control_path, "data-icon" => "plus", "class" => "ui-btn-right" %>
 </div>
 
-<div data-role="content" class="content-primary">
-  <ul data-role="listview" data-filter="true">
-    <% @cuadernos_controles.each do |cuaderno_control| %>
-    <li data-filtertext="<%= "#{cuaderno_control.fecha} #{Seccion.find(cuaderno_control.seccion_id).grado_seccion}" %>" >
-      <%= link_to cuaderno_control do %>
-        <%= simple_format("#{cuaderno_control.fecha} | #{Seccion.find(cuaderno_control.seccion_id).grado_seccion} | #{ListaValor.find_by_tabla_and_item(5, cuaderno_control.estado).descripcion}") %> 
-        
-      <% end %>
-      <%= link_to 'Eliminar', cuaderno_control, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>      
-    </li>
-    <% end  %>
-  </ul>
-</div>
+
+  <div data-role="collapsible-set" data-theme="b" data-content-theme="d" data-inset="false">
+    <div data-role="collapsible" data-collapsed="false" data-inset="false">
+      <h2>Abiertos</h2>
+      <ul data-role="listview" data-filter="true">
+        <% @cuadernos_controles.each do |cuaderno_control| %>
+          <% if cuaderno_control.estado == 1 %>
+            <li data-filtertext="<%= "#{cuaderno_control.fecha} #{Seccion.find(cuaderno_control.seccion_id).grado_seccion} #{ListaValor.find_by_tabla_and_item(5, cuaderno_control.estado).descripcion}" %>" >
+              <%= link_to cuaderno_control do %>
+                <%= image_tag("open_icon.jpg", :class => "ui-li-icon", :alt => "Abierto") %>
+                <%= "#{cuaderno_control.fecha.to_formatted_s(:rfc822)} - #{Seccion.find(cuaderno_control.seccion_id).grado_seccion}" %> 
+
+              <% end %>
+              <%= link_to 'Eliminar', cuaderno_control, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>      
+            </li>
+          <% end %>
+        <% end  %>
+      </ul>
+    </div>
+    
+    <div data-role="collapsible">
+      <h2>Cerrados</h2>
+      <ul data-role="listview" data-filter="true">
+        <% @cuadernos_controles.each do |cuaderno_control| %>
+          <% if cuaderno_control.estado == 2 %>
+            <li data-filtertext="<%= "#{cuaderno_control.fecha} #{Seccion.find(cuaderno_control.seccion_id).grado_seccion} #{ListaValor.find_by_tabla_and_item(5, cuaderno_control.estado).descripcion}" %>" >
+              <%= link_to cuaderno_control do %>
+                <%= image_tag("close_icon.jpg", :class => "ui-li-icon", :alt => "Cerrado") %>
+                <%= "#{cuaderno_control.fecha.to_formatted_s(:rfc822)} - #{Seccion.find(cuaderno_control.seccion_id).grado_seccion}" %> 
+
+              <% end %>
+              <%= link_to 'Eliminar', cuaderno_control, confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>      
+            </li>
+          <% end %>
+        <% end  %>
+      </ul> 
+    </div>
