--- a/app/views/cuadernos_controles/edit.html.erb
+++ b/app/views/cuadernos_controles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing cuaderno_control</h1>
+<div data-role="header">
+  <h1>Editar cuaderno de control</h1>
+  <%= link_to 'Regresar', cuadernos_controles_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @cuaderno_control %> |
-<%= link_to 'Back', cuadernos_controles_path %>
