--- a/app/views/personas_vinculadas/_form.html.erb
+++ b/app/views/personas_vinculadas/_form.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@persona_vinculada) do |f| %>
+<%= form_for(@persona_vinculada, :html => { :class => "ui-body ui-body-c" }) do |f| %>
   <% if @persona_vinculada.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@persona_vinculada.errors.count, "error") %> prohibited this persona_vinculada from being saved:</h2>
+    <div id="error_explanation" data-role="header" data-theme="e">
+      <h2><%= pluralize(@persona_vinculada.errors.count, "error") %> impidieron que se grabe el registro:</h2>
 
       <ul>
       <% @persona_vinculada.errors.full_messages.each do |msg| %>
@@ -10,47 +10,48 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :tipo_documento %><br />
-    <%= f.number_field :tipo_documento %>
-  </div>
-  <div class="field">
-    <%= f.label :numero_documento %><br />
-    <%= f.text_field :numero_documento %>
-  </div>
-  <div class="field">
-    <%= f.label :nombres %><br />
-    <%= f.text_field :nombres %>
-  </div>
-  <div class="field">
-    <%= f.label :apellido_paterno %><br />
-    <%= f.text_field :apellido_paterno %>
-  </div>
-  <div class="field">
-    <%= f.label :apellido_materno %><br />
-    <%= f.text_field :apellido_materno %>
-  </div>
-  <div class="field">
-    <%= f.label :telefono_fijo %><br />
-    <%= f.text_field :telefono_fijo %>
-  </div>
-  <div class="field">
-    <%= f.label :telefono_movil %><br />
-    <%= f.text_field :telefono_movil %>
-  </div>
-  <div class="field">
-    <%= f.label :correo %><br />
-    <%= f.text_field :correo %>
-  </div>
-  <div class="field">
-    <%= f.label :foto %><br />
-    <%= f.text_field :foto %>
-  </div>
-  <div class="field">
-    <%= f.hidden_field :usuario, :value => current_user.usuario %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div data-role="fieldcontain">
+    <div class="field">
+      <%= f.label :tipo_documento %><br />
+      <%= collection_select(:persona_vinculada, :tipo_documento, ListaValor.where("tabla=2"), :item, :descripcion, {}, {"data-mini" => "true"}) %>
+    </div>
+    <div class="field">
+      <%= f.label :numero_documento %><br />
+      <%= f.text_field :numero_documento %>
+    </div>
+    <div class="field">
+      <%= f.label :nombres %><br />
+      <%= f.text_field :nombres %>
+    </div>
+    <div class="field">
+      <%= f.label :apellido_paterno %><br />
+      <%= f.text_field :apellido_paterno %>
+    </div>
+    <div class="field">
+      <%= f.label :apellido_materno %><br />
+      <%= f.text_field :apellido_materno %>
+    </div>
+    <div class="field">
+      <%= f.label :telefono_fijo %><br />
+      <%= f.telephone_field :telefono_fijo, :placeholder => "444-4444" %>
+    </div>
+    <div class="field">
+      <%= f.label :telefono_movil %><br />
+      <%= f.telephone_field :telefono_movil, :placeholder => "999999999" %>
+    </div>
+    <div class="field">
+      <%= f.label :correo %><br />
+      <%= f.email_field :correo, :placeholder => "dirceu@example.com" %>
+    </div>
+    <div class="field">
+      <%= f.label :foto %><br />
+      <%= f.file_field :foto %>
+    </div>
+    <div class="field">
+      <%= f.hidden_field :usuario, :value => current_user.usuario %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+    </div>
   </div>
 <% end %>
