--- a/app/views/personas_vinculadas/new.html.erb
+++ b/app/views/personas_vinculadas/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New persona_vinculada</h1>
+<div data-role="header">
+  <h1>Nueva persona vinculada</h1>
+  <%= link_to 'Regresar', personas_vinculadas_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', personas_vinculadas_path %>
