--- a/app/views/personas_vinculadas/index.html.erb
+++ b/app/views/personas_vinculadas/index.html.erb
@@ -8,13 +8,10 @@
   <ul data-role="listview" data-filter="true">
     <% @personas_vinculadas.each do |persona_vinculada| %>
     <li data-role="list-divider">      
-      <%= persona_vinculada.apellidos_nombres %>
+      <%= "#{persona_vinculada.apellidos_nombres} - #{ListaValor.find_by_tabla_and_item(2, persona_vinculada.tipo_documento).descripcion} #{persona_vinculada.numero_documento}" %>
     </li>
-    <li data-filtertext="<%= persona_vinculada.apellidos_nombres %>" >
+    <li data-filtertext="<%= "#{persona_vinculada.apellidos_nombres} #{persona_vinculada.numero_documento} #{persona_vinculada.correo} #{persona_vinculada.telefono_fijo} #{persona_vinculada.telefono_movil}" %>" >
       <%= link_to edit_persona_vinculada_path(persona_vinculada) do %>
-        <%= image_tag("#{persona_vinculada.foto}") %>
-        <%= simple_format("#{ListaValor.find_by_tabla_and_item(2, persona_vinculada.tipo_documento).descripcion} #{persona_vinculada.numero_documento}") %> 
-        <br>
         <%= simple_format("Correo: #{persona_vinculada.correo}") %>
         <%= simple_format("Teléfonos: #{persona_vinculada.telefono_fijo} / #{persona_vinculada.telefono_movil}") %>
       <% end %>
