--- a/app/views/alumnos_personas_vinculadas/consultar.html.erb
+++ b/app/views/alumnos_personas_vinculadas/consultar.html.erb
@@ -30,7 +30,7 @@
     </div>
   <% end %>
   
-  <div class="ui-grid-a" style="border-style: solid; border-width: 1px; border-color: #06c; ">
+  <div class="ui-grid-a">
     <div class="ui-block-a">
        <% if tipo != "" %>
         <div data-role="content" style="color: #06c; text-align: center">
