Afinacion criterios de aceptacion

--- a/app/views/alumnos/show.html.erb
+++ b/app/views/alumnos/show.html.erb
@@ -6,16 +6,16 @@
 <div data-role="header" style="text-align: center" data-theme="c">
   Alumno: <%= @alumno.apellidos_nombres %>
 </div>
-<!--%= render @alumno.alumnos_personas_vinculadas %--> <!-- duplica -->
-
 <div data-role="content">
   <ul id='alumnos_personas_vinculadas' data-role="listview">
-    <% @alumno.alumnos_personas_vinculadas.each do |alumno_persona_vinculada| %>
+  <% @alumno.alumnos_personas_vinculadas.each do |alumno_persona_vinculada| %>
+    <% if !alumno_persona_vinculada.persona_vinculada_id.nil? %> 
     <li>
-      <%= link_to simple_format(alumno_persona_vinculada.apellidos_nombres), [:edit, @alumno, alumno_persona_vinculada] %>
+      <%= link_to simple_format(alumno_persona_vinculada.apellidos_nombres), [@alumno, alumno_persona_vinculada] %>
       <%= link_to 'Eliminar vínculo', [alumno_persona_vinculada.alumno, alumno_persona_vinculada], confirm: '¿Seguro que desea eliminar el registro?', method: :delete, "data-icon" => "delete" %>
     </li>
     <% end %>
+  <% end %>
   </ul>
 </div>
 
