--- a/app/views/personas_vinculadas/_form.html.erb
+++ b/app/views/personas_vinculadas/_form.html.erb
@@ -48,7 +48,7 @@
       <%= f.file_field :foto %>
     </div>
     <div class="field">
-      <%= f.hidden_field :usuario, :value => current_user.usuario %>
+      <%= f.hidden_field :user, :value => current_user.usuario %>
     </div>
     <div class="actions">
       <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
