Grabacion de salidas de alumnos

--- a/app/views/cuaderno_controles_revisiones/show.html.erb
+++ b/app/views/cuaderno_controles_revisiones/show.html.erb
@@ -37,6 +37,7 @@
     <div class="field">
       <%= f.text_area :observaciones, :readonly => true %>
     </div>
-    <br />Revisado
+    <br />
+    <div data-role="footer">Revisado</div>
   <% end %>
 <% end %>
