--- a/app/views/alumnos_personas_vinculadas/consultar.html.erb
+++ b/app/views/alumnos_personas_vinculadas/consultar.html.erb
@@ -35,6 +35,7 @@
       <hr>
     </div>
 
+    <% if params[:tipo_documento] != "0" %>
     <div class="ui-block-b" style="text-align: center;">
        <% if tipo != "" %>
         <div data-role="content" style="color: #06c; text-align: center">
@@ -45,18 +46,29 @@
         </div>
       <% end %>
     </div>
+    
     <div class="ui-block-c">
-      <div data-role="content" style="color: #06c; text-align: center">           
-        <% @alumnos_personas_vinculadas.each do |alumno_persona_vinculada| %>
-        <p>
-          <%= image_tag(alumno_persona_vinculada.alumno.foto) %> <br/>
-          <%= alumno_persona_vinculada.alumno.apellidos_nombres %>   
-          <%= check_box_tag "alumno_persona_vinculada_id[]",alumno_persona_vinculada.id%>
-        </p>
-        <hr>
-        <% end  %>               
+      <div data-role="content" style="color: #06c; text-align: center"> 
+        <%= form_tag(crear_en_bloque_asistencias_path, {"onSubmit" => "return verificarCantidadCheckBoxes('alumno_id[]', 1, -1, 'alumno');", "data-ajax" => "false", "name" => "salida"}) do %>
+          <div data-role="fieldcontain">
+            <% @alumnos_personas_vinculadas.each do |alumno_persona_vinculada| %>
+              <p>
+                <%= image_tag(alumno_persona_vinculada.alumno.foto) %> <br/>
+                <%= alumno_persona_vinculada.alumno.apellidos_nombres %>
+                <%= check_box_tag 'alumno_id[]',alumno_persona_vinculada.alumno.id %>                             
+              </p>
+              <hr>
+            <% end %> 
+            <%= hidden_field_tag 'persona_vinculada_id', persona.id %>
+            <div>
+              <%= submit_tag "Registrar salida", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
+    <% end %>
+    
   </div><!-- /grid-a --> 
   
 </div>
